# ray-tracer

./: .clang-format  .gitignore  CMakeLists.txt  camera.cpp  camera.h  camera.hpp  canvas.cpp  canvas.h  color.h  common.cpp  common.h  figure.hpp  figures.cpp  figures.h  image.hpp  main.cpp  material.cpp  material.h  material.hpp  ray.cpp  ray.h  ray.hpp  utilities.hpp
src/: canvas.cpp  canvas.h  figures.h  lighting.cpp  lighting.h  main.cpp  mat.cpp  mat.h  material.h  ray.cpp  ray.h  tuple.cpp  tuple.h  world.h
tests/: canvas_test.cpp  color_test.cpp  lighting_test.cpp  mat_test.cpp  ray_test.cpp  tuple_test.cpp  world_test.cpp
